tests/ui/parser/empty-impl-semicolon.rs
struct Foo;
impl Foo; //~ ERROR expected `{}`, found `;`

fn main() {}

// ferrocene-annotations: fls_fk2m2irwpeof
// Implementations
